# distro-rack

./: CMakeLists.txt  DistroboxManager.cpp  NEWS  README.md  README.zh_CN.md  StateManager.h  main.cpp
.github/workflows/: build-deb.yml
debian/: changelog  control
qml/: ContainerDetails.qml  ContainerList.qml  CreateContainerDialog.qml  ExportableAppsDialog.qml  Main.qml  SettingsDialog.qml  TaskManagerDialog.qml  TerminalSettingsTab.qml
qml/+dde/: Main.qml
translations/: distro-rack_de.ts  distro-rack_en.ts  distro-rack_nl.ts  distro-rack_pl.ts  distro-rack_tr.ts  distro-rack_zh_CN.ts
